3.10.8/_sources/_tags/component-axes.rst.txt
.. _sphx_tag_component-axes:

All tags: component: axes
#########################

.. toctree::
    :maxdepth: 1
    :caption: With this tag

    ../gallery/animation/multiple_axes.rst
    ../gallery/lines_bars_and_markers/scatter_hist.rst
    ../gallery/mplot3d/2dcollections3d.rst
    ../gallery/mplot3d/contour3d_3.rst
    ../gallery/mplot3d/contourf3d_2.rst
    ../gallery/mplot3d/view_planes_3d.rst
    ../gallery/subplots_axes_and_figures/axes_box_aspect.rst
    ../gallery/subplots_axes_and_figures/axes_demo.rst
    ../gallery/subplots_axes_and_figures/axes_margins.rst
    ../gallery/subplots_axes_and_figures/axis_equal_demo.rst
    ../gallery/subplots_axes_and_figures/demo_constrained_layout.rst
    ../gallery/subplots_axes_and_figures/demo_tight_layout.rst
    ../gallery/subplots_axes_and_figures/fahrenheit_celsius_scales.rst
    ../gallery/subplots_axes_and_figures/subplots_demo.rst
    ../gallery/subplots_axes_and_figures/two_scales.rst
    ../gallery/subplots_axes_and_figures/zoom_inset_axes.rst
    ../gallery/widgets/polygon_selector_simple.rst
